# qwen-tts

./: .gitignore  README.md  plan.md  pyproject.toml  test_torch.py
app/: __init__.py  main.py
app/api/: http_voice.py  ws_tts.py
app/core/: config.py  logger.py  model_manager.py
app/service/: audio_utils.py  tts_stream.py  voice_clone.py
app/storage/: file_store.py  voice_store.py
app/worker/: tts_worker.py
docs/: MODEL_DOWNLOAD.md
models/qwen_tts/: README.md
scripts/: ws_tts_client.py
