[project]
name = "qwentts"
version = "0.1.0"
description = "FastAPI TTS service with Qwen3-TTS voice clone and WebSocket streaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.1",
    "qwen-tts>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "websockets>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
